# source-launcher-mkII

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  bms_launcher.cpp  bms_launcher.h  bms_launcher.rc  example_launcher.cpp  example_launcher.h  example_launcher.rc  hdtf_launcher.cpp  hdtf_launcher.h  hdtf_launcher.rc  hl1_launcher.rc  hl2_launcher.cpp  hl2_launcher.h  hl2_launcher.rc  hl2mmodtr_launcher.cpp  hl2mmodtr_launcher.h  hl2mmodtr_launcher.rc  portal_launcher.h
.github/workflows/: build-msvc-x86.yml
Black Mesa/Black Mesa/: RCa25740
Black Mesa/Black Mesa Blue Shift/: CMakeLists.txt
Half-Life 2/main/: hl2_launcher.cpp
Half-Life 2/steam_legacy/hl2/: hl2_launcher.cpp
Half-Life 2/steam_legacy/lostcoast/: hl2_launcher.cpp
Half-Life Source/: CMakeLists.txt  CMakePresets.json  hl1_launcher.cpp  hl1_launcher.h  toolchain-mingw64.cmake
Portal/: CMakeLists.txt  portal_launcher.cpp  portal_launcher.rc
Postal III/: CMakeLists.txt  p3_launcher.cpp  p3_launcher.h  p3_launcher.rc
